[package]
name = "playlists"
version = "0.1.0"
edition = "2021"

[dependencies]
bytes = "1.6.0"
chrono = "0.4.38"
flate2 = "1.0.28"
xxhash-rust = { version = "0.8.10", features = ["xxh3", "const_xxh3"] }
tls-helpers = "0.1.3"
access-unit = { git = "ssh://git@github.com/wavey-ai/access-unit.git" }
tracing = "0.1.40"
thiserror = "1.0.64"
tokio = { version = "1.42.0", features = ["full"] }
dashmap = "6.1.0"
